--- a/Frontends/MShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -32,7 +32,6 @@
 					<div class="navbar-nav mr-auto py-0">
 						<a href="/Default/Index/" class="nav-item nav-link">Ana Sayfa</a>
 						<a href="/ProductList/Index/" class="nav-item nav-link">Ürünler</a>
-						<a href="detail.html" class="nav-item nav-link">Ürün Detayları</a>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sayfalar <i class="fa fa-angle-down mt-1"></i></a>
 							<div class="dropdown-menu bg-primary rounded-0 border-0 m-0">
@@ -40,7 +39,7 @@
 								<a href="checkout.html" class="dropdown-item">Ödeme</a>
 							</div>
 						</div>
-						<a href="contact.html" class="nav-item nav-link">İletişim</a>
+						<a href="/Contact/Index/" class="nav-item nav-link">İletişim</a>
 					</div>
 					<div class="navbar-nav ml-auto py-0 d-none d-lg-block">
 						<a href="" class="btn px-0">
