--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
@@ -11,7 +11,7 @@
 			</tr>
 		</thead>
 		<tbody class="align-middle">
-			@if (Model != null)
+			@if (Model.Count>0)
 			{
 				@foreach (var item in Model)
 				{
@@ -34,7 +34,7 @@
 							</div>
 						</td>
 						<td class="align-middle">@item.TotalPrice</td>
-						<td class="align-middle"><button class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
+						<td class="align-middle"><a href="/ShoppingCard/RemoveBasket/@item.UserId" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a></td>
 					</tr>
 				}
 
