--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
@@ -11,7 +11,7 @@
 			</tr>
 		</thead>
 		<tbody class="align-middle">
-			@if (Model.Select(x=>x.Quantity).FirstOrDefault()>0)
+			@if (Model!=null)
 			{
 				@foreach (var item in Model)
 				{
