--- a/Frontends/MShop.WebUI/Views/ShoppingCard/Index.cshtml
+++ b/Frontends/MShop.WebUI/Views/ShoppingCard/Index.cshtml
@@ -25,7 +25,7 @@
 
         @await Component.InvokeAsync("_ShoppingCardListComponentPartial")
 
-        @await Component.InvokeAsync("_ShoppingCartDiscountCouponComponentPartial")
+        @await Html.PartialAsync("~/Views/Discount/_ConfirmCouponCode.cshtml")
 
        
     </div>
