--- a/Frontends/MShop.WebUI/Views/Order/Index.cshtml
+++ b/Frontends/MShop.WebUI/Views/Order/Index.cshtml
@@ -1,94 +1,78 @@
-﻿
+﻿@model CreateAddressDto
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/UILayout/_UILayout.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/UILayout/_UILayout.cshtml";
 }
 
-<div class="container-fluid">
-    <div class="row px-xl-5">
-        <div class="col-lg-8">
-            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Billing Address</span></h5>
-            <div class="bg-light p-30 mb-5">
-                <div class="row">
-                    <div class="col-md-6 form-group">
-                        <label>Ad</label>
-                        <input class="form-control" type="text" placeholder="Ad">
-                    </div>
-                    <div class="col-md-6 form-group">
-                        <label>SoyAd</label>
-                        <input class="form-control" type="text" placeholder="SoyAd">
-                    </div>
-                    <div class="col-md-6 form-group">
-                        <label>E-mail</label>
-                        <input class="form-control" type="text" placeholder="mail">
-                    </div>
-                    <div class="col-md-6 form-group">
-                        <label>Mobile No</label>
-                        <input class="form-control" type="text" placeholder="+123 456 789 Telefon">
-                    </div>
-                    <div class="col-md-6 form-group">
-                        <label>İl</label>
-                        <input class="form-control" type="text" placeholder="İl">
-                    </div>
-                    <div class="col-md-6 form-group">
-                        <label>İlçe</label>
-                        <input class="form-control" type="text" placeholder="İlçe">
-                    </div>
-                    <div class="col-md-6 form-group">
+<form method="post" asp-controller="Order" asp-action="Index">
+	<div class="container-fluid">
+		<div class="row px-xl-5">
+			<div class="col-lg-8">
+				<h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Billing Address</span></h5>
+
+
+
+				<div class="bg-light p-30 mb-5">
+					<div class="row">
+						<div class="col-md-6 form-group">
+							<label>Ad</label>
+							<input class="form-control" type="text" placeholder="Ad" asp-for="UserName">
+						</div>
+						<div class="col-md-6 form-group">
+							<label>SoyAd</label>
+							<input class="form-control" type="text" placeholder="SoyAd" asp-for="UserSurname">
+						</div>
+						<div class="col-md-6 form-group">
+							<label>E-mail</label>
+							<input class="form-control" type="text" placeholder="mail" asp-for="Email">
+						</div>
+						<div class="col-md-6 form-group">
+							<label>Mobile No</label>
+							<input class="form-control" type="text" placeholder="+123 456 789 Telefon" asp-for="Phone">
+						</div>
+						<div class="col-md-6 form-group">
+							<label>İl</label>
+							<input class="form-control" type="text" placeholder="İl" asp-for="City">
+						</div>
+						<div class="col-md-6 form-group">
+							<label>İlçe</label>
+							<input class="form-control" type="text" placeholder="İlçe" asp-for="District">
+						</div>
+						@*    <div class="col-md-6 form-group">
                         <label>Ülke</label>
-                        <select class="custom-select">
-                       
+                        <select class="custom-select" asp-for="">
+
                             <option value="Türkiye" selected>Türkiye</option>
                             <option value="Almanya">Almanya</option>
-                         
+
                         </select>
-                    </div>
+                    </div> *@
 
-                    <div class="col-md-6 form-group">
-                        <label>Açık Adres Tarifi</label>
-                        <input class="form-control" type="text" placeholder="Adres Detayı">
-                    </div>
+						<div class="col-md-6 form-group">
+							<label>Açık Adres Tarifi</label>
+							<input class="form-control" type="text" placeholder="Adres Detayı" asp-for="Detail">
+						</div>
 
-                    <div class="col-md-6 form-group">
-                        <label>Açıklama</label>
-                        <input class="form-control" type="text" placeholder="Açıklama">
-                    </div>
-                </div>
-            </div>
-        </div>
+						<div class="col-md-6 form-group">
+							<label>Açıklama</label>
+							<input class="form-control" type="text" placeholder="Açıklama" asp-for="Description">
+						</div>
+					</div>
+				</div>
 
-        <!--OrderTotal-->
-        <div class="col-lg-4">
-           
-            @await Component.InvokeAsync("_OrderTotalComponentPartial")
+			</div>
 
-            <!--Payment-->
-            <div class="mb-5">
-                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Payment</span></h5>
-                <div class="bg-light p-30">
-                    <div class="form-group">
-                        <div class="custom-control custom-radio">
-                            <input type="radio" class="custom-control-input" name="payment" id="paypal">
-                            <label class="custom-control-label" for="paypal">Paypal</label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="custom-control custom-radio">
-                            <input type="radio" class="custom-control-input" name="payment" id="directcheck">
-                            <label class="custom-control-label" for="directcheck">Direct Check</label>
-                        </div>
-                    </div>
-                    <div class="form-group mb-4">
-                        <div class="custom-control custom-radio">
-                            <input type="radio" class="custom-control-input" name="payment" id="banktransfer">
-                            <label class="custom-control-label" for="banktransfer">Bank Transfer</label>
-                        </div>
-                    </div>
-                    <button class="btn btn-block btn-primary font-weight-bold py-3">Place Order</button>
-                </div>
-            </div>
-        </div>
+			<!--OrderTotal-->
+			<div class="col-lg-4">
 
-    </div>
-</div>
+				@await Component.InvokeAsync("_OrderTotalComponentPartial")
 
+				<button class="btn btn-block btn-primary font-weight-bold py-3">Adres Bilgilerini Kaydet</button>
+				
+
+			</div>
+
+		</div>
+	</div>
+
+</form>
