--- a/Frontends/MShop.WebUI/Views/Payment/Index.cshtml
+++ b/Frontends/MShop.WebUI/Views/Payment/Index.cshtml
@@ -9,5 +9,29 @@
 <form method="post"> 
       <input type="hidden" asp-for="OrderDate" value="@DateTime.Now" />
       <input type="hidden" asp-for="TotalPrice" value="0" />
-    <button>Devam et</button>
+
+	<div class="mb-5">
+		<h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Payment</span></h5>
+		<div class="bg-light p-30">
+			<div class="form-group">
+				<div class="custom-control custom-radio">
+					<input type="radio" class="custom-control-input" name="payment" id="paypal">
+					<label class="custom-control-label" for="paypal">Paypal</label>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="custom-control custom-radio">
+					<input type="radio" class="custom-control-input" name="payment" id="directcheck">
+					<label class="custom-control-label" for="directcheck">EFT-HAVALE</label>
+				</div>
+			</div>
+			<div class="form-group mb-4">
+				<div class="custom-control custom-radio">
+					<input type="radio" class="custom-control-input" name="payment" id="banktransfer">
+					<label class="custom-control-label" for="banktransfer">Kredi Kartı</label>
+				</div>
+			</div>
+			<button class="btn btn-block btn-primary font-weight-bold py-3">Devam Et</button>
+		</div>
+	</div>   
 </form>
