--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Message/InBox.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Message/InBox.cshtml
@@ -1,26 +1,27 @@
-﻿@model List<GetMessageByUserId>
+﻿@model List<GetMessageWithSenderNameDto>
 @{
-    ViewData["Title"] = "InBox";
-    Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
+	ViewData["Title"] = "InBox";
+	Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
 	int count = 0;
 }
 
 <div class="card">
 	<div class="card-header">
-		<div class="card-title">Kategori İşlemleri</div>
+		<div class="card-title">Şirket İçi Mesajlar</div>
 	</div>
 	<div class="card-body">
 		<table class="table table-head-bg-success">
 			<thead>
 				<tr>
 					<th scope="col">#</th>
-					<th scope="col">Ürün Adı</th>
-					<th scope="col">Kategori Adı</th>
-					<th scope="col">Fiyatı</th>
-					<th scope="col">Yorumlar</th>
-					<th scope="col">Detaylar</th>
+					<th scope="col">Gönderen</th>
+					<th scope="col">Konu</th>
+					<th scope="col">Tarih</th>
+					<th scope="col">Durum</th>
+					<th scope="col">Mesaj</th>
+					<th scope="col">MesajDetayı..</th>
 					<th scope="col">Sil</th>
-					<th scope="col">Güncelle</th>
+					
 				</tr>
 			</thead>
 			<tbody>
@@ -29,10 +30,14 @@
 					count++;
 					<tr>
 						<td>@count</td>
-						<td>@item.SenderId</td>
+						<td>@item.SenderName</td>
 						<td>@item.Subject</td>
 						<td>@item.SendedDate</td>
-						<td>@item.IsReaded</td>
+						@if (item.IsReaded == false)
+						{
+							<td>Okunmadı</td>
+						}
+						else{<td>Okundu</td>}
 						@if (item.Messages.Length >= 25)
 						{
 							<td>@item.Messages.Substring(0, 25) ...</td>
