--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -12,3 +12,4 @@
 @using Frontends.DTO.CATALOG.CommentDTOS
 @using Frontends.DTO.CATALOG.ContactDTOS
 @using Frontends.DTO.MESSAGE
+@using Frontends.DTO.CARGO
